--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <title>Sample App</title>
   </head>
   <body>
+    <!--[if lt IE 7]>
+    <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <![endif]-->
     <div id='root'>
     </div>
     <script src="/static/bundle.js"></script>
